# adventOfCode

./: .gitignore  README.md
.github/workflows/: codspeed.yml
2022/: go.mod
2024/: Cargo.toml
2024/01/HistorianHysteria/src/: main.rs
2024/benches/: bench.rs
2024/src/: day1.rs  lib.rs  main.rs
2024/src/day1/: mod.rs
2024/src/day10/: mod.rs  models.rs  part1.rs  part2.rs
2024/src/day11/: mod.rs  part1.rs
2024/src/day12/: mod.rs  models.rs  part1.rs  part2.rs
2024/src/day13/: mod.rs  part1.rs  part2.rs
2024/src/day2/: mod.rs
2024/src/day3/: mod.rs
2024/src/day4/: mod.rs
2024/src/day5/: mod.rs
2024/src/day6/: mod.rs  models.rs  part1.rs  part2.rs
2024/src/day7/: mod.rs  models.rs  part1.rs  part2.rs
2024/src/day8/: mod.rs  models.rs  part1.rs  part2.rs
2024/src/day9/: mod.rs  models.rs  part1.rs  part2.rs
2024/template/dayXX/: mod.rs
2025/: go.work
2025/1/: README.txt  go.mod  main.go  main_test.go
2025/2/: go.mod  main.go  main_test.go
2025/3/: README.txt  go.mod  main.go  main_test.go
2025/3/testLogHandler/: testLogHandler.go
2025/4/: go.mod  main.go  main_test.go
2025/6/: go.mod  main.go  main_test.go
