[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Bordel"]
[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.54.0"

[dev-dependencies]
bencher = { version = "2.7.2", package = "codspeed-bencher-compat" }
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
[[bench]]
name = "bench"
harness = false
